Project 4/infrastructure/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shieldgrid
  namespace: shieldgrid
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: SHIELDGRID_ACM_CERT_ARN
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
    alb.ingress.kubernetes.io/load-balancer-attributes: "idle_timeout.timeout_seconds=60,routing.http2.enabled=true"
    alb.ingress.kubernetes.io/wafv2-acl-arn: SHIELDGRID_WAF_ACL_ARN
spec:
  rules:
    - host: app.shieldgrid.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: shieldgrid-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shieldgrid-dashboard
                port:
                  name: http
